changing format of research page and added news

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -833,17 +833,17 @@ table {
   padding: 0;
 }
 table tr {
-  border-top: 1px solid #cccccc;
+  border-top: 1px var(--page-col);
   background-color: var(--page-col);
   margin: 0;
   padding: 0;
 }
 table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+  background-color: var(--page-col);
 }
 table tr th,
 table tr td {
-  border: 1px solid #cccccc;
+  border: 1px solid var(--page-col);
   text-align: left;
   margin: 0;
   padding: 0.375rem 0.8125rem;
